# trellis-asset-forge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  game-ready-assets.md  reference-prompting.md
examples/: README.md  assets.yaml
src/trellis_asset_forge/: __init__.py  audio.py  catalog.py  cli.py  domain.py  fal.py  forge.py  generation.py  manifest.py  mesh_quality.py  models.py  pricing.py  processing.py  profiles.py  review_web.py  workspace.py
src/trellis_asset_forge/templates/: review.html
tests/: test_audio.py  test_cli.py  test_fal.py  test_generation_workflow.py  test_manifest_catalog.py  test_mesh_quality.py  test_pricing.py  test_processing_workflow.py  test_review_web.py  test_review_workflow.py  test_workspace.py
