[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "trellis-asset-forge"
version = "0.1.0"
description = "Cataloged, reviewable, game-ready 3D asset generation with fal and TRELLIS.2"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Domagoj Satrapa" }]
keywords = ["trellis", "fal", "3d", "game-development", "gltf", "glb"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.28",
  "jinja2>=3.1",
  "numpy>=2.1",
  "pydantic>=2.9",
  "pyyaml>=6.0",
  "rich>=13.9",
  "trimesh>=4.5",
  "typer>=0.15",
  "uvicorn>=0.34",
]

[project.urls]
Homepage = "https://github.com/Domogo/trellis-asset-forge"
Repository = "https://github.com/Domogo/trellis-asset-forge"
Issues = "https://github.com/Domogo/trellis-asset-forge/issues"

[project.scripts]
trellis-forge = "trellis_asset_forge.cli:app"
taf = "trellis_asset_forge.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "types-pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trellis_asset_forge"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["trellis_asset_forge"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["trellis_asset_forge"]

